feat: Se desactiva CORS 7